Bug 904842 - Markup View - Selected nodes with word wrapped attributes are not fully highlighted. r=paul
UltraBlame original commit: 7ecc377b80ab1df3111cf89ecb920e91171f88e2

--- a/browser/themes/shared/devtools/markup-view.css
+++ b/browser/themes/shared/devtools/markup-view.css
@@ -74,39 +74,6 @@ cursor
 :
 pointer
 ;
-}
-/
-*
-Give
-some
-padding
-to
-focusable
-elements
-to
-match
-the
-editor
-input
-*
-that
-will
-replace
-them
-.
-*
-/
-span
-[
-tabindex
-]
-{
-display
-:
-inline
--
-block
-;
 padding
 :
 1px
